Generalised instantiation and checking of components